imporve frontend and backend